Added slope_sinuosity, xs_metrics_plot, and xs_profile_plot functions

--- a/data-raw/Create_package_data.Rmd
+++ b/data-raw/Create_package_data.Rmd
@@ -18,8 +18,10 @@ Test data in ESRI ArcGIS file geodatabase format is stored in
 
 Convert a file geodatabase feature class to an sp object
 ```{r}
-sin_xs_points     <- fgm::arc2sp("test.gdb/cross_section_points")
-sin_xs_dimensions <- fgm::arc2sp("test.gdb/cross_section_dims")
+sin_flowline_points <- fgm::arc2sp("test.gdb/flowline_points")
+sin_riffle          <- fgm::arc2sp("test.gdb/riffle")
+sin_xs_points       <- fgm::arc2sp("test.gdb/cross_section_points")
+sin_xs_dimensions   <- fgm::arc2sp("test.gdb/cross_section_dims")
 ```
 
 
