--- a/README.Rmd
+++ b/README.Rmd
@@ -42,4 +42,4 @@ devtools::install_github(repo = "FluvialGeomorph/fluvgeo", build_vignettes = TRU
 ```
 
 ## Bug Reports
-If you find any bugs using `fluvgeo`, plase open an [issue](https://github.com/FluvialGeomorph/fluvgeo/issues). 
+If you find any bugs using `fluvgeo`, please open an [issue](https://github.com/FluvialGeomorph/fluvgeo/issues). 
