--- a/inst/reports/bankfull_report.Rmd
+++ b/inst/reports/bankfull_report.Rmd
@@ -42,7 +42,7 @@ if (params$output_format == "word_document") {
 
 ```{r, calc_xs_dims, echo=FALSE}
 # Calculate cross section dimensions
-xs_dims <- fluvegeo::xs_dimensions(xs_points = params$xs_points,
+xs_dims <- fluvgeo::xs_dimensions(xs_points = params$xs_points,
                                streams = params$stream,
                                regions = params$regions,
                                bankfull_elevations = params$bankfull_elevations)
