Estimate Bankfull report configuration

--- a/inst/reports/estimate_bankfull_report.Rmd
+++ b/inst/reports/estimate_bankfull_report.Rmd
@@ -10,7 +10,7 @@ params:
    output_format: "html_document"
 ---
 
-# Estimate Bankfull: `r params$stream` River
+# `r params$stream` River
 The purpose of this analysis is to identify the bankfull elevation over a set of riffle cross sections for an ungaged stream reach by using regional hydraulic relationships.
 
 ```{r, library, echo=FALSE, message=FALSE}
