--- a/inst/reports/level_2_report.Rmd
+++ b/inst/reports/level_2_report.Rmd
@@ -13,6 +13,7 @@ params:
   regions: ""
   extent_factor: 1
   label_xs: TRUE
+  profile_units: "kilometers"
   output_format: "html_document"
 ---
 
@@ -23,6 +24,8 @@ library(knitr)
 library(ggplot2)
 library(ggrepel)
 library(tmap)
+library(arcgisbinding)
+arcgisbinding::arc.check_product()
 ```
 
 ```{r output, document_type, echo=FALSE}
@@ -63,18 +66,20 @@ features_sp    <- sf::as_Spatial(features_sf_zm)
 
 print(fluvgeo::xs_profile_plot(reach_xs_dims = xs_dims_sp, 
                                features = features_sp, 
-                               label_xs = params$label_xs))
+                               label_xs = params$label_xs),
+                               profile_units = params$profile_units)
 ```
 
 ## Cross Section Metrics
-```{r, xs_metrics_plot, eval=FALSE, echo=FALSE, results='asis', fig.width=7, fig.height=8, fig.cap="Cross Section Metrics Plot. ", warning=FALSE}
-print(fluvgeo::xs_metrics_plot(reach_xs_dims = params$xs_dims_planform@data, 
-                               features_sp = params$features,
-                               label_xs = params$label_xs))
+```{r, xs_metrics_plot, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=9, fig.cap="Cross Section Metrics Plot. ", warning=FALSE}
+print(fluvgeo::xs_metrics_plot_2(xs_dims_sf = params$xs_dims_sf, 
+                                 features_sf = params$features_sf,
+                                 label_xs = params$label_xs,
+                                 profile_units = params$profile_units))
 ```
 
 ## Width Depth Ratio
-```{r, wdr_map, eval=FALSE, echo=FALSE, results='asis', fig.width=7, fig.height=8, fig.cap="Width depth Ratio Map", warning=FALSE}
+```{r, wdr_map, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=8, fig.cap="Width depth Ratio Map", warning=FALSE}
 # Create the fluvgeo::FluvialGeomorphicMetric object
 wdr <- new(Class = "FluvialGeomorphicMetric",
            metric = "Width Depth Ratio",
@@ -88,20 +93,27 @@ wdr <- new(Class = "FluvialGeomorphicMetric",
 
 # Create the reach metric map
 print(fluvgeo::map_reach_metric(wdr,
-                                params$flowline,
-                                params$xs_dims_planform))
+                                params$flowline_sf,
+                                params$xs_dims_sf))
 ```
 
-```{r wdr_plot, eval=FALSE, echo=FALSE, fig.width=7, fig.cap="Width Depth Ratio Graph", warning=FALSE}
+```{r wdr_plot, eval=TRUE, echo=FALSE, fig.width=7, fig.cap="Width Depth Ratio Graph", warning=FALSE}
 print(fluvgeo::xs_metric_plot(metric = wdr,
-                              reach_xs_dims = params$xs_dims_planform@data,
-                              label_xs = TRUE))
+                              reach_xs_dims = params$xs_dims_sf,
+                              label_xs = TRUE,
+                              profile_units = params$profile_units))
 ```
 
 ## Cross Section Geometry
 The figure below displays the selected regional hydraulic geometry curves plotted with the values for each of the cross sections in the current reach.
 
-```{r, regional_curve_graph, eval=FALSE, echo=FALSE, results='asis', fig.width=7, fig.height=8, fig.cap="Regional Hydraulic Geometry Curves"}
+```{r, regional_curve_graph, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=8, fig.cap="Regional Hydraulic Geometry Curves"}
+# Calculate cross section dimensions for the reach regional curves graph
+xs_dims <- xs_dimensions(xs_points = params$xs_points_sf,
+                         streams = params$stream,
+                         regions = params$regions,
+                         bankfull_elevations = c(params$bf_estimate))
+
 # Draw reach regional curves graph
 print(fluvgeo::reach_rhg_graph(xs_dims = xs_dims,
                                streams = params$stream,
@@ -111,17 +123,17 @@ print(fluvgeo::reach_rhg_graph(xs_dims = xs_dims,
 ## Cross Section Profiles
 This section displays cross section profile graphs for each riffle cross section in this stream reach. A table of cross section hydraulic geometry dimensions appears under each cross section profile. The first row contains the hydraulic geometry dimensions for the selected region, while the second row contains hydraulic geometry dimensions for the current cross section.
 
-```{r, xs_plots, eval=FALSE, echo=FALSE, results='asis', fig.width=7, fig.height=4, warning=TRUE}
+```{r, xs_plots, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=4, warning=TRUE}
 # Iterate through cross sections creating: map, cross section plot, and 
 # RHG table
 xs_pts <- params$xs_points
 for (j in as.integer(levels(as.factor(xs_pts$Seq)))) {
     # Create the cross section map
-    print(fluvgeo::map_xs(cross_section = params$xs_dims_planform,
-                      xs_number = j,
-                      dem = params$dem,
-                      banklines = params$banklines,
-                      extent_factor = params$extent_factor))
+    print(fluvgeo::map_xs(cross_section = params$xs_dims_sf,
+                          xs_number = j,
+                          dem = params$dem,
+                          banklines = params$banklines_sf,
+                          extent_factor = params$extent_factor))
   
     # Create the cross section plot
     print(fluvgeo::xs_plot(xs_points = xs_pts,
@@ -142,7 +154,7 @@ for (j in as.integer(levels(as.factor(xs_pts$Seq)))) {
     t <- knitr::kable(x = dims_sort[, c("xs_type", "drainage_area", "xs_area", 
                                         "xs_width", "xs_depth")],
                       format = format,
-                      digits = 2,
+                      digits = 1,
                       row.names = FALSE,
                       col.names = c("Cross Section Type", "Drainage Area", 
                                     "Area", "Width", "Depth"),
