--- a/inst/reports/level_2_report.Rmd
+++ b/inst/reports/level_2_report.Rmd
@@ -13,6 +13,7 @@ params:
   regions: ""
   extent_factor: 1
   label_xs: TRUE
+  show_xs_map: FALSE
   profile_units: "kilometers"
   output_format: "html_document"
 ---
@@ -126,44 +127,46 @@ This section displays cross section profile graphs for each riffle cross section
 ```{r, xs_plots, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=4, warning=TRUE}
 # Iterate through cross sections creating: map, cross section plot, and 
 # RHG table
-xs_pts <- params$xs_points
+xs_pts <- params$xs_points_sf
 for (j in as.integer(levels(as.factor(xs_pts$Seq)))) {
-    # Create the cross section map
-    print(fluvgeo::map_xs(cross_section = params$xs_dims_sf,
+  # Create the cross section map  
+  if(params$show_xs_map) {
+    print(fluvgeo::map_xs(cross_section = params$xs_sf,
                           xs_number = j,
                           dem = params$dem,
                           banklines = params$banklines_sf,
                           extent_factor = params$extent_factor))
+  }
   
-    # Create the cross section plot
-    print(fluvgeo::xs_plot(xs_points = xs_pts,
-                       stream = params$stream,
-                       xs_number = j,
-                       bankfull_elevation = params$bf_estimate))
-    # Calculate cross section geometry
-    xs_pts_j <- xs_pts[xs_pts$Seq == j, ]
-    dims <- fluvgeo::xs_dimensions(xs_points = xs_pts_j,
-                               streams = params$stream,
-                               regions = params$regions,
-                               bankfull_elevations = params$bf_estimate)
-    # Remove duplicate 'DEM derived cross section' records
-    dims_unique <- unique(dims)
-    # Sort by 'xs_type'
-    dims_sort <- dims_unique[order(dims_unique$xs_type), ]
-    # Create kable table to display cross section dimensions
-    t <- knitr::kable(x = dims_sort[, c("xs_type", "drainage_area", "xs_area", 
-                                        "xs_width", "xs_depth")],
-                      format = format,
-                      digits = 1,
-                      row.names = FALSE,
-                      col.names = c("Cross Section Type", "Drainage Area", 
-                                    "Area", "Width", "Depth"),
-                      booktabs = T)
-    # Use knitr print function to ensure table is drawn properly
-    knitr:::print.knitr_kable(t)
-    # Insert vertical white space so that next figure in loop is recognized
-    cat('\n')
-    # Must set chunk option`results='asis'` to ensure table is drawn properly
+  # Create the cross section plot
+  print(fluvgeo::xs_plot(xs_points = params$xs_points_sf,
+                         stream = params$stream,
+                         xs_number = j,
+                         bankfull_elevation = params$bf_estimate))
+  # Calculate cross section geometry
+  xs_pts_j <- xs_pts[xs_pts$Seq == j, ]
+  dims <- fluvgeo::xs_dimensions(xs_points = xs_pts_j,
+                                 streams = params$stream,
+                                 regions = params$regions,
+                                 bankfull_elevations = params$bf_estimate)
+  # Remove duplicate 'DEM derived cross section' records
+  dims_unique <- unique(dims)
+  # Sort by 'xs_type'
+  dims_sort <- dims_unique[order(dims_unique$xs_type), ]
+  # Create kable table to display cross section dimensions
+  t <- knitr::kable(x = dims_sort[, c("xs_type", "drainage_area", "xs_area",
+                                      "xs_width", "xs_depth")],
+                    format = format,
+                    digits = 1,
+                    row.names = FALSE,
+                    col.names = c("Cross Section Type", "Drainage Area",
+                                  "Area", "Width", "Depth"),
+                    booktabs = T)
+  # Use knitr print function to ensure table is drawn properly
+  knitr:::print.knitr_kable(t)
+  # Insert vertical white space so that next figure in loop is recognized
+  cat('\n')
+  # Must set chunk option`results='asis'` to ensure table is drawn properly
 }
 ```
 
